--- a/css/main.css
+++ b/css/main.css
@@ -367,7 +367,7 @@ body.body-1 {
 }
 
 .container-grid#image-2 {
-  background-image: url('../images/tech3.jpg');
+  background-image: url('../images/cat-eyes.jpg');
   background-attachment: scroll;
   background-position: center center;
   background-clip: border-box;
